--- a/app/src/main/res/layout/admin_item.xml
+++ b/app/src/main/res/layout/admin_item.xml
@@ -37,7 +37,7 @@
               app:layout_constraintTop_toTopOf="parent" />
 
           <TextView
-              android:id="@+id/delegateName"
+              android:id="@+id/adminNameList"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="احمد حازم"
@@ -62,7 +62,7 @@
               android:layout_marginEnd="@dimen/_4sdp"
               app:layout_constraintBottom_toBottomOf="@+id/delegateImg"
               app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="@+id/delegateName" />
+              app:layout_constraintStart_toStartOf="@+id/adminNameList" />
 
 
       </androidx.constraintlayout.widget.ConstraintLayout>
