--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -158,6 +158,19 @@
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/imagesListRecycler"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+
     <TextView
         android:layout_marginTop="@dimen/_23sdp"
         android:textSize="@dimen/_12sdp"
@@ -246,7 +259,7 @@
             android:id="@+id/describeProductEditText"
             android:gravity="top|start"
             android:paddingTop="10dp"
-            android:paddingStart="@dimen/_5sdp"
+            android:padding="@dimen/_16sdp"
             android:background="@null"
             android:textColor="@color/white"
             android:layout_width="match_parent"
@@ -441,6 +454,15 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/current_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/barCodeTxt"
+        android:textColor="@color/login_gray"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
