--- a/app/src/main/res/layout/fragment_add_new_pass.xml
+++ b/app/src/main/res/layout/fragment_add_new_pass.xml
@@ -38,39 +38,95 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgetPassImage"
         android:id="@+id/forgetPassHeader"
-        android:text="@string/forget_password"
+        android:text="@string/add_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:textColor="@color/login_gray"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textSize="@dimen/_13sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgetPassHeader"
-        android:id="@+id/secondHeader"
-        android:text="@string/dont_worry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+
 
     <LinearLayout
-        android:id="@+id/phoneContainer"
+        android:id="@+id/newPassContainer"
         android:orientation="vertical"
-        android:layout_marginTop="@dimen/_40sdp"
-        app:layout_constraintEnd_toEndOf="@id/secondHeader"
-        app:layout_constraintStart_toStartOf="@id/secondHeader"
-        app:layout_constraintTop_toBottomOf="@+id/secondHeader"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgetPassHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
 
         <TextView
             android:textSize="@dimen/_12sdp"
             android:drawableStart="@drawable/ic_username"
-            android:text="@string/reset_phone"
+            android:text="@string/newPassword"
+            android:textColor="@color/login_gray"
+            android:textAlignment="viewStart"
+            android:drawablePadding="@dimen/_7sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/containerNewPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginEnd="28dp"
+            >
+            <!-- android:drawableStart="@drawable/ic_person_icon"-->
+            <EditText
+                android:id="@+id/newPasswordEditText"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:theme="@style/adding_loginstate"
+                android:drawablePadding="16dp"
+                android:textSize="@dimen/_12sdp"
+                android:hint="@string/mobile_number"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textAlignment="viewStart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+            <TextView
+                android:visibility="gone"
+                android:drawableStart="@drawable/ic_error_input"
+                android:drawablePadding="@dimen/_5sdp"
+                android:id="@+id/errorNewPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:paddingBottom="@dimen/_5sdp"
+                android:textColor="@color/error_color"
+                app:layout_constraintStart_toStartOf="@+id/newPasswordEditText"
+                app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/confirmationnewPassContainer"
+        android:orientation="vertical"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newPassContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textSize="@dimen/_12sdp"
+            android:drawableStart="@drawable/ic_username"
+            android:text="@string/newPassword"
             android:textColor="@color/login_gray"
             android:textAlignment="viewStart"
             android:drawablePadding="@dimen/_7sdp"
@@ -85,7 +141,7 @@
             >
             <!-- android:drawableStart="@drawable/ic_person_icon"-->
             <EditText
-                android:id="@+id/phoneNumberEditText"
+                android:id="@+id/ConfirmationPasswordEditText"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:theme="@style/adding_loginstate"
@@ -93,7 +149,7 @@
                 android:textSize="@dimen/_12sdp"
                 android:hint="@string/mobile_number"
                 android:imeOptions="actionNext"
-                android:inputType="phone"
+                android:inputType="textPassword"
                 android:padding="8dp"
                 android:textAlignment="viewStart"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -103,40 +159,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <!--  <ImageView
-                  android:id="@+id/checked_image_ev"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:visibility="gone"
-                  android:layout_marginEnd="@dimen/_10sdp"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:srcCompat="@drawable/ic_x" /> -->
+
 
             <TextView
                 android:visibility="gone"
                 android:drawableStart="@drawable/ic_error_input"
                 android:drawablePadding="@dimen/_5sdp"
-                android:id="@+id/errorPhone"
+                android:id="@+id/errorConfirmation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="17dp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:textColor="@color/error_color"
-                app:layout_constraintStart_toStartOf="@+id/phoneNumberEditText"
-                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText" />
+                app:layout_constraintStart_toStartOf="@+id/ConfirmationPasswordEditText"
+                app:layout_constraintTop_toBottomOf="@+id/ConfirmationPasswordEditText" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sendButton"
+        android:id="@+id/confirmButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
+        app:layout_constraintTop_toBottomOf="@id/confirmationnewPassContainer"
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_30sdp"
@@ -144,7 +190,7 @@
         app:backgroundTint="@color/orange_color"
         app:cornerRadius="7dp"
         android:textStyle="bold"
-        android:text="@string/send"
+        android:text="@string/confirm"
         android:textColor="@color/white"
         android:textAlignment="center"
         android:gravity="center"
