--- a/app/src/main/res/layout/verfication_fragment.xml
+++ b/app/src/main/res/layout/verfication_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -60,22 +61,38 @@
     <LinearLayout
         android:id="@+id/phoneContainer"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_marginTop="@dimen/_40sdp"
         app:layout_constraintEnd_toEndOf="@id/secondHeader"
         app:layout_constraintStart_toStartOf="@id/secondHeader"
         app:layout_constraintTop_toBottomOf="@+id/secondHeader"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <com.mukesh.OtpView
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/otp_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textAllCaps="true"
+            app:hideLineWhenFilled="true"
+            app:itemCount="4"
+            app:itemSpacing="@dimen/_10sdp"
+            app:lineColor="@color/gray"
+            app:state_filled="true"
+            app:viewType="line" />
 
-        <com.alahammad.otp_view.OtpView
+       <!-- <com.alahammad.otp_view.OtpView
             android:id="@+id/otp"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
-            app:otp_number="4" />
+            app:otp_number="4" /> -->
 
 
     </LinearLayout>
@@ -100,8 +117,20 @@
         android:textAllCaps="false"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"/>
-
     <TextView
+        android:layout_marginTop="@dimen/_7sdp"
+        android:id="@+id/timerTextView"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        app:layout_constraintStart_toStartOf="@id/confirmButton"
+        app:layout_constraintEnd_toEndOf="@id/confirmButton"
+        app:layout_constraintTop_toBottomOf="@id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:visibility="gone"
         android:textColor="@color/login_gray"
         android:layout_marginStart="@dimen/_15sdp"
         android:textStyle="bold"
@@ -114,6 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:visibility="gone"
         android:textColor="@color/light_red"
         android:textStyle="bold"
         android:layout_marginStart="@dimen/_5sdp"
