--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/ffshamelfamily_sansonebook</item>
+        <item name="otpViewStyle">@style/OtpWidget.OtpView</item>
 
     </style>
 
