accountant ProductsList & product details Api

--- a/app/src/main/res/layout/fragment_accountant_products.xml
+++ b/app/src/main/res/layout/fragment_accountant_products.xml
@@ -49,6 +49,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        tools:visibility="visible"
         android:id="@+id/accProdRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
