--- a/app/src/main/res/layout/no_products.xml
+++ b/app/src/main/res/layout/no_products.xml
@@ -18,6 +18,7 @@
 
 
         <ImageView
+            android:id="@+id/no_data_image"
             android:layout_width="@dimen/_80sdp"
             android:layout_height="@dimen/_80sdp"
             app:srcCompat="@drawable/ic_product_img"
@@ -25,6 +26,7 @@
             />
 
         <TextView
+            android:id="@+id/firstNoDataTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_products"
@@ -35,6 +37,7 @@
             />
 
         <TextView
+            android:id="@+id/secondNoDataTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/plz_add_prod"
