adding version accountant

--- a/app/src/main/res/layout/fragment_edit_password.xml
+++ b/app/src/main/res/layout/fragment_edit_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".admin.settings.EditPasswordFragment">
+    tools:context=".admin.settings.editpassword.EditPasswordFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -108,7 +108,19 @@
                     android:textColor="@color/text_grey"
                     />
 
-
+                <TextView
+                    android:visibility="gone"
+                    android:drawableStart="@drawable/ic_error_input"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:id="@+id/errorCurrentPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:textColor="@color/error_color"
+                    app:layout_constraintStart_toStartOf="@+id/currantPassEdt"
+                    app:layout_constraintTop_toBottomOf="@+id/currantPassEdt" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -150,7 +162,19 @@
                     android:textColor="@color/text_grey"
                     />
 
-
+                <TextView
+                    android:visibility="gone"
+                    android:drawableStart="@drawable/ic_error_input"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:id="@+id/errorNewPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:textColor="@color/error_color"
+                    app:layout_constraintStart_toStartOf="@+id/newPassEdt"
+                    app:layout_constraintTop_toBottomOf="@+id/newPassEdt" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -192,7 +216,19 @@
                     android:textColor="@color/text_grey"
                     />
 
-
+                <TextView
+                    android:visibility="gone"
+                    android:drawableStart="@drawable/ic_error_input"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:id="@+id/errorConfirmPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:textColor="@color/error_color"
+                    app:layout_constraintStart_toStartOf="@+id/confirmPassEdt"
+                    app:layout_constraintTop_toBottomOf="@+id/confirmPassEdt" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
