--- a/app/src/main/res/layout/fragment_add_store.xml
+++ b/app/src/main/res/layout/fragment_add_store.xml
@@ -7,15 +7,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".admin.storesproducts.fragments.AddStoreFragment">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titleContainer"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/colorOrange55"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/backImgAddStore"
             android:layout_width="wrap_content"
@@ -27,15 +29,15 @@
             app:srcCompat="@drawable/ic_ab_back_light" />
 
         <TextView
-            android:text="@string/add_store"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/textColor"
-            android:fontFamily="@font/ffshamelfamily_sansonebold"
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            android:fontFamily="@font/ffshamelfamily_sansonebold"
+            android:text="@string/add_store"
+            android:textColor="@color/textColor"
+            android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/backImgAddStore"
 
@@ -43,7 +45,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <ScrollView
         app:layout_constraintTop_toBottomOf="@+id/titleContainer"
