--- a/app/src/main/res/layout/fragment_admin_accountant.xml
+++ b/app/src/main/res/layout/fragment_admin_accountant.xml
@@ -110,14 +110,15 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPagerDelegatesAccountant"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPagerDelegatesAccountant"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_anchor="@+id/nestedScrollView"
+            app:layout_anchorGravity="center" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
