--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -53,6 +53,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/notificationRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -64,5 +65,18 @@
 
 
         />
+
+    <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topContainer"
+        android:id="@+id/noDataLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone">
+        <include layout="@layout/no_products" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
