--- a/app/src/main/res/layout/add_call_center.xml
+++ b/app/src/main/res/layout/add_call_center.xml
@@ -44,9 +44,9 @@
             android:theme="@style/adding_loginstate"
             android:drawablePadding="16dp"
             android:textSize="@dimen/_12sdp"
-            android:hint="@string/mobile_number"
+            android:hint="@string/name"
             android:imeOptions="actionNext"
-            android:inputType="phone"
+            android:inputType="text"
             android:padding="8dp"
             android:textAlignment="viewStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
