--- a/app/src/main/res/layout/edit_call_center.xml
+++ b/app/src/main/res/layout/edit_call_center.xml
@@ -44,9 +44,9 @@
             android:theme="@style/adding_loginstate"
             android:drawablePadding="16dp"
             android:textSize="@dimen/_12sdp"
-            android:hint="@string/mobile_number"
+            android:hint="@string/name"
             android:imeOptions="actionNext"
-            android:inputType="phone"
+            android:inputType="text"
             android:padding="8dp"
             android:textAlignment="viewStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -73,11 +73,71 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/headerEmail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containerCallCenterName"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:textSize="@dimen/_14sdp"
+        android:text="@string/email_address"
+        android:textColor="@color/black_bold"
+        android:textAlignment="viewStart"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerEmail"
+        android:id="@+id/emailContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp"
+        >
+        <!-- android:drawableStart="@drawable/ic_person_icon"-->
 
+
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:drawablePadding="16dp"
+            android:hint="@string/email_address"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
+            android:padding="8dp"
+            android:textAlignment="viewStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+            android:textSize="@dimen/_14sdp"
+            android:theme="@style/adding_loginstate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:visibility="gone"
+            android:drawableStart="@drawable/ic_error_input"
+            android:drawablePadding="@dimen/_5sdp"
+            android:id="@+id/errorEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:textColor="@color/error_color"
+            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/headerPhoneNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/containerCallCenterName"
+        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
         android:layout_marginTop="@dimen/_30sdp"
         android:textSize="@dimen/_14sdp"
         android:text="@string/phone_number"
