--- a/app/src/main/res/layout/fragment_admin_accountant.xml
+++ b/app/src/main/res/layout/fragment_admin_accountant.xml
@@ -105,20 +105,15 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-            <LinearLayout
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPagerDelegatesAccountant"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                app:layout_anchor="@+id/nestedScrollView"
+                app:layout_anchorGravity="center" />
         </androidx.core.widget.NestedScrollView>
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPagerDelegatesAccountant"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_anchor="@+id/nestedScrollView"
-            app:layout_anchorGravity="center" />
+
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
