--- a/app/src/main/res/layout/fragment_admin_details.xml
+++ b/app/src/main/res/layout/fragment_admin_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".admin.delegatesAccountants.fragments.AccountantDetailsFragment">
+    tools:context=".admin.settings.admin.AdminDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titleContainer"
@@ -17,7 +17,7 @@
         android:background="@color/colorOrange55"
         >
         <ImageView
-            android:id="@+id/backImgAddAccountant"
+            android:id="@+id/backImgAdminDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_24sdp"
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/titleTxt"
-            android:text="@string/accounatntDetails"
+            android:text="@string/adminDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -38,7 +38,7 @@
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginTop="@dimen/_16sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/backImgAddAccountant"
+            app:layout_constraintTop_toBottomOf="@+id/backImgAdminDetails"
 
             />
 
@@ -68,7 +68,7 @@
                 app:riv_corner_radius="5dp"
                 android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_240sdp"
-                android:id="@+id/accountantDetailsImage"
+                android:id="@+id/adminDetailsImage"
                 android:scaleType="centerCrop"
                 app:riv_mutate_background="true"
                 android:layout_gravity="center"
@@ -107,7 +107,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/accountantDetailsName"
+                        android:id="@+id/adminDetailsName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
@@ -122,7 +122,7 @@
 
 
                     <TextView
-                        android:id="@+id/accountantPhoneName"
+                        android:id="@+id/adminPhoneName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
@@ -135,7 +135,7 @@
                         />
 
                     <TextView
-                        android:id="@+id/accountantDetailsLocation"
+                        android:id="@+id/adminDetailsLocation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
@@ -149,7 +149,7 @@
 
 
                     <TextView
-                        android:id="@+id/accountantDetailsEmail"
+                        android:id="@+id/adminDetailsEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
@@ -183,7 +183,6 @@
 
 
     </androidx.core.widget.NestedScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
