--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -60,8 +60,29 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <com.smarteist.autoimageslider.SliderView
+                android:id="@+id/detailsSlider"
+                android:layout_width="@dimen/_250sdp"
+                android:layout_height="@dimen/_240sdp"
+                android:layout_gravity="center"
+                app:sliderAnimationDuration="600"
+                app:sliderAutoCycleEnabled="true"
+                app:sliderCircularHandlerEnabled="true"
+                app:sliderIndicatorAnimationDuration="600"
+                app:sliderIndicatorGravity="center_horizontal|bottom"
+                app:sliderIndicatorMargin="15dp"
+                app:sliderIndicatorOrientation="horizontal"
+                app:sliderIndicatorPadding="2dp"
+                app:sliderIndicatorRadius="2dp"
+                app:sliderIndicatorRtlMode="auto"
+                app:sliderScrollTimeInSec="3"
+                app:sliderStartAutoCycle="true"
+                android:layout_marginTop="@dimen/_30sdp"
+
+                />
 
             <com.makeramen.roundedimageview.RoundedImageView
+                android:visibility="gone"
                 android:src="@color/gray"
                 app:riv_corner_radius="5dp"
                 android:layout_width="@dimen/_250sdp"
@@ -94,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="@dimen/_150sdp"
                 style="@style/cardDialog"
+                android:layout_marginBottom="@dimen/_100sdp"
                 >
 
 
@@ -106,15 +128,143 @@
 
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/DetailsNameTxt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
-                        android:text="@string/name"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_15ssp"
+                        android:textColor="@color/black_bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                          />
+
+                    <TextView
+                        android:id="@+id/DetailsDescTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:text=""
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/DetailsNameTxt"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
+                    <LinearLayout
+                        android:id="@+id/priceLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintTop_toBottomOf="@+id/DetailsDescTxt"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_margin="@dimen/_10sdp"
+
+                        >
+
+
+                        <TextView
+                            android:id="@+id/DetailsPriceTxt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="viewStart"
+                            android:text=""
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:textColor="@color/black_bold"
+                            />
+
+                        <TextView
+                            android:id="@+id/DetailsPriceCurrencyTxt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="viewStart"
+                            android:text=""
+                            android:textColor="@color/black_bold"
+                            />
+
+                    </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/DetailsCategoryTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:text=""
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/priceLayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
+                    <TextView
+                        android:id="@+id/quantityTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:text="@string/quantityD"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_12ssp"
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/DetailsCategoryTxt"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
+                    <TextView
+                        android:id="@+id/quantityText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:text=""
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/quantityTitle"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/storesTitleTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:text="@string/storeNameD"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_12ssp"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/quantityText"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/storesNameTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"
+                        android:text="electronic"
+                        android:layout_marginBottom="@dimen/_20sdp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:textColor="@color/black_bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/storesTitleTxt"
+                        app:layout_constraintStart_toStartOf="parent"
+                        />
+
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
